# Django2

./: .env.sample  README.md  catalog_data.json  categories.json  product.json  pyproject.toml
blog/: admin.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_preview.py  0003_alter_blog_slug.py
blog/templates/blog/: blog_detail.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/comands/: fill.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_price.py  0003_alter_product_created_at_alter_product_updated_at.py  0004_version.py  0005_product_publication_sign.py  0006_alter_product_options.py  0007_alter_product_options.py  0008_product_owner.py
catalog/templates/: base.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_token.py
users/templates/users/: login.html  password_recovery_form.html
